# static-web-server

./: .cirrus.yml  .dockerignore  .drone.yml  .gitignore  .mdformat.toml  .travis.yml  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.fips.toml  Dockerfile  Jenkinsfile  LICENCE  LICENSE-MIT  Makefile  Makefile.toml  README.md  SECURITY.md  Tasks.Dev.toml  Tasks.Prod.toml  bors.toml  build.rs  build.sh  debug.sh  docker-compose.yml  mkdocs.yml  release.sh  rust-toolchain.xoml  sample.env  test-release.sh  test.sh  wasmer.toml
.cargo/: audit.toml  config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: audit.yml  ci.yml  devel.code-analyzer.yml  devel.docker.fips.yml  devel.docker.yml  devel.fips.yml  devel.project.docs.yml  devel.yml  perfcheck.yml  release-please.yml  release.build.manual.yml  release.checksums.yml  release.crate.yml  release.docker.devel.yml  release.docker.fips.yml  release.docker.manual.yml  release.docker.yml  release.fips.yml  release.updates.yml  release.yml
benches/: Cargo.toml  control_headers.rs  http_ext.rs  security_basic_auth.rs  security_redirects.rs  security_sanitize_path.rs  static_files.rs
benchmark/: BENCHMARKS.md  sws_benchmarks.csv  wrk_collector.lua
ci/: cargo.sh  get_latest_release.sh  upload_release_file.sh
contrib/grafana/: dashboard.json
crates/sws-plugin-api/: Cargo.toml
crates/sws-plugin-api/src/: abi.rs  lib.rs  macros.rs  plugin.rs  tests.rs
crates/sws-plugin-loader/: Cargo.toml
crates/sws-plugin-loader/src/: error.rs  host.rs  lib.rs  manager.rs  tests.rs  types.rs
docker/: docker-compose.yml  docker-entrypoint.sh  sws-envoy.dockerfile  sws.dockerfile  version.sh
docker/alpine/: Dockerfile  Dockerfile.tmpl  entrypoint.sh  tmpl.Dockerfile
docker/alpine-fips/: Dockerfile
docker/debian/: Dockerfile  entrypoint.sh
docker/debian-fips/: Dockerfile
docker/devel/: Dockerfile.alpine  Dockerfile.debian  Dockerfile.scratch
docker/envoy/: docker-compose.yml  docker-entrypoint.sh  sw.envoy.dockerfile
docker/public/: index.html
docker/scratch/: Dockerfile  Dockerfile.tmpl  tmpl.Dockerfile
docker/scratch-fips/: Dockerfile
docs/: 404.html  CNAME  CODE_STYLE.md  COMMITS.md  Dockerfile  PULL_REQUESTS.md  README.md  docker-compose.yml  entrypoint.sh  index.html  index.md  installer.sh  mkdocs.yml  platforms-architectures.md  sitemap.xml
docs/assets/: style.css
docs/building-from-source/: index.html
docs/changelog-v1/: index.html
docs/changelog-v2/: index.html
docs/configuration/: environment-variables.md
docs/content/: building-from-source.md  changelog-v1.md  changelog-v2.md  contributions.md  download-and-install.generated.md  download-and-install.md  download-and-install.template.md  download-and-install.tmpl.md  getting-started.md  index.md  license.md  migration.md  platforms-architectures.md  report-security-issues.md  semantic-versioning.md  showcases.md
docs/contributions/: index.html
docs/download-and-install/: index.html
docs/download-and-install.generated/: index.html
docs/download-and-install.template/: index.html
docs/download-and-install.tmpl/: index.html
docs/examples/: docker.md  http1.md
docs/getting-started/: index.html
docs/license/: index.html
docs/man/: static-web-server.1.rst
docs/migration/: index.html
docs/platforms-architectures/: index.html
docs/report-security-issues/: index.html
docs/search/: search_index.json
docs/semantic-versioning/: index.html
docs/showcases/: index.html
examples/plugins/request-logger/: Cargo.toml
examples/plugins/request-logger/src/: lib.rs
fuzz/: .gitignore  Cargo.toml
fuzz/src/: content_disposition.rs  cors_origin.rs  redirect_placeholders.rs  static_files.rs
public/: 404.html  50x.html  index.html
public/assets/: main.css  main.js
scripts/: installer.sh  release.sh  version.sh
scripts/ci/: benchmark_plot.gnu  generate_checksums.sh  get_latest_release.sh  install_tools.sh  post_release_updates.sh  vegeta_report_to_csv.jq
src/: access_logs.rs  basic_auth.rs  body.rs  cache.rs  compression.rs  compression_static.rs  conditional_headers.rs  config.rs  control_headers.rs  controller.rs  cors.rs  custom_headers.rs  directory_listing.rs  directory_listing_download.rs  env.rs  error.rs  error_page.rs  etag.rs  fallback_page.rs  file_path.rs  file_response.rs  file_stream.rs  filters.rs  fs.rs  gzip.rs  handler.rs  health.rs  helpers.rs  http_ext.rs  https_redirect.rs  lib.rs  log_addr.rs  logger.rs  main.rs  maintenance_mode.rs  manifest.rs  markdown.rs  mem_cache.rs  metrics.rs  mime_ext.rs  (+20 more)
src/core/: cache.rs  config.rs  cors.rs  helpers.rs  logger.rs  mod.rs  rejection.rs  result.rs
src/directory_listing/: dir.rs  download.rs  file.rs  mod.rs  sort.rs  style.rs
src/exts/: http.rs  mod.rs  path.rs
src/fs/: meta.rs  mod.rs  path.rs  stream.rs
src/headers_ext/: accept.rs  accept_encoding.rs  content_coding.rs  mod.rs  quality_value.rs
src/mem_cache/: cache.rs  mod.rs  stream.rs
src/response/: mod.rs  range.rs
src/server/: http1.rs  http1_tls.rs  http2.rs  listener.rs  mod.rs  opts.rs  redirect.rs  uds.rs
src/settings/: cli.rs  cli_output.rs  file.rs  mod.rs
src/static_files/: listing.rs  mod.rs  opts.rs  reply.rs  resolve.rs  security.rs
src/staticfile_middleware/: cache.rs  guess_content_type.rs  helpers.rs  http_to_https_redirect.rs  mod.rs  modify_with.rs  partial_file.rs  prefix.rs  rewrite.rs  staticfile.rs
systemd/: etc_default_static-web-server  static-web-server.service  static-web-server.socket
templates/: directory_listing.html  directory_listing.json
tests/: compression.rs  compression_static.rs  cors.rs  dir_listing.rs  dir_listing_download.rs  etag.rs  experimental_metrics.rs  file_logging.rs  handler.rs  markdown.rs  mem_cache.rs  plugins.rs  redirects.rs  rewrites.rs  settings.rs  static_files.rs  text_charset.rs  tls.rs  use_relative_root.rs
tests/scripts/: dynamic.lua
tests/tls/: README.md  (+6 more)
(+167 files in other folders)
